--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+  <link href="https://fonts.googleapis.com/css?family=Sunflower:300" rel="stylesheet">
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
